misc update work